--- a/index.html
+++ b/index.html
@@ -11,13 +11,26 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
     <!-- Apple App Icon -->
-    <link rel="apple-touch-icon" href="/favicon-64x64.png" />
+    <link rel="apple-touch-icon" href="/favicon-512x512.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="theme-color" content="#1e3a8a" />
+
+    <!-- iOS Splash Screens for iPad Pro -->
+    <link rel="apple-touch-startup-image"
+          href="/apple-splash-2048x2732.png"
+          media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
+    
+    <link rel="apple-touch-startup-image"
+          href="/apple-splash-2732x2048.png"
+          media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" />
+
+    <!-- Optional fallback if no match -->
+    <link rel="apple-touch-startup-image" href="/apple-splash-2048x2732.png" />
+
   </head>
   <body>
     <div id="root"></div>
