--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64x64.png" />
 
     <!-- Apple App Icon -->
-    <link rel="apple-touch-icon" href="/favicon-512x512.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/favicon-512x512.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
@@ -28,9 +30,8 @@
           href="/apple-splash-2732x2048.png"
           media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" />
 
-    <!-- Optional fallback if no match -->
+    <!-- Universal fallback -->
     <link rel="apple-touch-startup-image" href="/apple-splash-2048x2732.png" />
-
   </head>
   <body>
     <div id="root"></div>
