--- a/index.html
+++ b/index.html
@@ -21,16 +21,27 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="theme-color" content="#1e3a8a" />
 
-    <!-- iOS Splash Screens for iPad Pro -->
-    <link rel="apple-touch-startup-image"
-          href="/apple-splash-2048x2732.png"
+    <!-- Splash Screens -->
+
+    <!-- iPad Pro 12.9" -->
+    <link rel="apple-touch-startup-image" href="/apple-splash-2048x2732.png"
           media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
-    
-    <link rel="apple-touch-startup-image"
-          href="/apple-splash-2732x2048.png"
+    <link rel="apple-touch-startup-image" href="/apple-splash-2732x2048.png"
           media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" />
 
-    <!-- Universal fallback -->
+    <!-- iPad Gen 10 -->
+    <link rel="apple-touch-startup-image" href="/apple-splash-1640x2360.png"
+          media="(device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="/apple-splash-2360x1640.png"
+          media="(device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" />
+
+    <!-- iPhone 11 Pro -->
+    <link rel="apple-touch-startup-image" href="/apple-splash-1125x2436.png"
+          media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" />
+    <link rel="apple-touch-startup-image" href="/apple-splash-2436x1125.png"
+          media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)" />
+
+    <!-- Fallback -->
     <link rel="apple-touch-startup-image" href="/apple-splash-2048x2732.png" />
   </head>
   <body>
