--- a/index.html
+++ b/index.html
@@ -48,5 +48,7 @@
     <div id="root"></div>
     <script type="module" src="/@vite/client"></script>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.4/dist/tesseract.min.js"></script>
+
   </body>
 </html>
