--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
     />
     <title>Flightbriefing Dashboard</title>
 
-    <!-- Apple Touch Icon (iOS Home Screen) -->
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <!-- Manifest & Theme -->
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#1e3a8a" />
 
-    <!-- Favicon -->
+    <!-- Icons -->
+    <link rel="apple-touch-icon" href="/apple-icon-180.png" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
     <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64x64.png" />
 
-    <!-- Mobile Web App Capable -->
+    <!-- PWA Capabilities -->
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -26,10 +28,6 @@
     <!-- App Titles -->
     <meta name="application-name" content="Flightbriefing Dashboard" />
     <meta name="apple-mobile-web-app-title" content="Flightbriefing" />
-
-    <!-- PWA Manifest -->
-    <link rel="manifest" href="/site.webmanifest" />
-    <meta name="theme-color" content="#1e3a8a" />
 
     <!-- Splash Screens -->
     <!-- iPhone SE (1st, 2nd, 3rd gen) -->
