fix: clean index.html for PWA splash ipad 10th gen

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     <!-- iPhone, iPad splashes .jpg (all resolutions) -->
     ... [semua <link rel="apple-touch-startup-image"> kamu yang sekarang] ...
     
+    <!-- iPad Gen 10 -->
+      <link rel="apple-touch-startup-image" href="/apple-splash-1640-2360.jpg"
+      media="(device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
+      <link rel="apple-touch-startup-image" href="/apple-splash-2360-1640.jpg"
+      media="(device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" />
+
     <!-- Fallback -->
     <link rel="apple-touch-startup-image" href="/apple-splash-2048-2732.jpg" />
   </head>
