--- a/index.html
+++ b/index.html
@@ -98,5 +98,10 @@
     <script type="module" src="/@vite/client"></script>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.4/dist/tesseract.min.js"></script>
+    <script
+      src="https://app.sandbox.midtrans.com/snap/snap.js"
+      data-client-key="SB-Mid-client-3ERuL_1HwyOr5HnE">
+    </script>
+
   </body>
 </html>
