refactor: update settings split, add privacy tools, refine admin routes

--- a/index.html
+++ b/index.html
@@ -98,5 +98,11 @@
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5.0.4/dist/tesseract.min.js"></script>
 
+    <!-- Midtrans sandbox -->
+    <script
+      src="https://app.sandbox.midtrans.com/snap/snap.js"
+      data-client-key="%VITE_MIDTRANS_CLIENT_KEY%">
+    </script>
+
   </body>
 </html>
