chore: cleanup RACSnapshotWidget, add canonical & SEO meta, robots.txt, and auto sitemap

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     />
     <title>Flightbriefing Dashboard</title>
 
+    <!-- Canonical URL for SEO -->
+    <link rel="canonical" href="https://www.skydeckpro.id/" />
+
+    <!-- Robots instruction for crawlers -->
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph Meta (Social Sharing) -->
+    <meta property="og:url" content="https://www.skydeckpro.id/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="SkyDeckPro" />
+    <meta property="og:title" content="SkyDeckPro – Flightbriefing Dashboard" />
+    <meta
+      property="og:description"
+      content="All-in-one flight briefing dashboard for pilots: weather, NOTAM, RAC, quizzes, and more. Built for mobile & cockpit use."
+    />
+    <meta property="og:image" content="/apple-icon-180.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SkyDeckPro – Flightbriefing Dashboard" />
+    <meta
+      name="twitter:description"
+      content="All-in-one flight briefing dashboard for pilots: weather, NOTAM, RAC, quizzes, and more."
+    />
+    <meta name="twitter:image" content="/apple-icon-180.png" />
+
     <!-- Manifest & Theme -->
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="theme-color" content="#1e3a8a" />
@@ -103,6 +129,5 @@
       src="https://app.sandbox.midtrans.com/snap/snap.js"
       data-client-key="%VITE_MIDTRANS_CLIENT_KEY%">
     </script>
-
   </body>
 </html>
